Can now generate random words each game

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <title>Hangman Game</title>
     <!-- External CSS file -->
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <!-- jQuery CDN  -->
-    <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
-    <!-- External JS file -->
-    <script type="text/javascript" src="actions.js"></script>
   </head>
 
   <body>
@@ -39,6 +35,12 @@
     <button id='X' class='letters' value='X'>X</button>
     <button id='Y' class='letters' value='Y'>Y</button>
     <button id='Z' class='letters' value='Z'>Z</button>
-    <p></p>
+    <p id='underscore'></p>
+    <p id='remaining'><p>
+
+    <!-- jQuery CDN  -->
+    <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+    <!-- External JS file -->
+    <script type="text/javascript" src="actions.js"></script>
   </body>
 </html>
