Changed list of words and added hint paragraph

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <button id='X' class='letters' value='X'>X</button>
     <button id='Y' class='letters' value='Y'>Y</button>
     <button id='Z' class='letters' value='Z'>Z</button>
+    <p id='hint'><b>HINT:</b> type of fruit</p>
     <p id='underscore'></p>
     <p id='remaining'><p>
 
